# otus-cpp-hw15

./: .travis.yml  CMakeLists.txt  README.md  kkmeans.cpp  kkmeans_ex.txt  kkmeans_ex2.txt  visualize.cpp
data/: kkmeans_ex2.txt  kkmeans_ex3.txt  kkmeans_ex4.txt  output.txt  output2_n10.txt  output2_n3.txt  output3.txt  output4.txt
